Modificacion de algunas controllers, validaciones y swagger
